--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Özgün ürünlerimiz, kalifiye insan kaynağımız, hayallerimiz ve inancımızla 45 yıldır ülkemize değer katıyor, halkımıza güven veriyoruz."/>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
+   
  
-    <title>React App</title>
+    <title>Aselsan 1975</title>
   </head>
   <body>
     <div id="root"></div>
