--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <div id="root"></div>
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.1/umd/react.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.1/umd/react-dom.production.min.js"></script>
   </body>
 </html>
